# aws-mwaa-local-runner

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: secrets_rotator.yml
dags/: .airflowignore  example.py  example_dag_factory.py  example_dag_factory.yml
dags/my_process_pipeline/: my_process_dag.py
dags/my_process_pipeline/backfill/: readme.py
docker/: docker-compose-local.yml
requirements/: requirements.txt
scripts/ci/mwaa_local_runner/: local_runner.sh
scripts/ci/pre_commit/: pre_commit_flake8.sh
scripts/ci/static_checks/: flake8.sh  run_static_checks.sh
{{ cookiecutter.repo_name }}/: .tartufo-excludes  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/.github/workflows/: deploy_to_prod.yml  validate_and_deploy_to_dev.yml  validate_and_deploy_to_dev_local_runner.yml
{{ cookiecutter.repo_name }}/dags/local_libs/: my_custom_operator.py
{{ cookiecutter.repo_name }}/scripts/emr_bootstrap/: emr_bootstrap.sh
{{ cookiecutter.repo_name }}/{{ cookiecutter.sub_domain }}/{{ cookiecutter.first_pipeline_name }}/src/ddls/: sample.ddl
