[tool.poetry]
name = "mwaa-skeleton"
version = "0.1.0"
description = "Template for MWAA repositories and local dev setup"
authors = ["akumar1 <akumar1@godaddy.com>"]

[[tool.poetry.source]]
name = "gdartifactory"
url = "https://artifactory.secureserver.net/artifactory/api/pypi/python-virt/simple"
secondary = true


[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.dev-dependencies]
flake8 = "3.9.1"
apache-airflow = "2.2.2"
boto3 = "^1.17.112"
Flask-OpenID = "1.3.0"
data-lake-airflow-plugins = "^2.7.0"
apache-airflow-providers-amazon = "2.3.0"
apache-airflow-providers-slack = "4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ['py36', 'py37', 'py38']
skip-string-normalization = true
